# CMake-Template

./: CMakeLists.txt  Stack.cpp  Stack.h  monom.h  parser.h  polynom.h
list/: list.cpp  list.h
main/: main.cpp
queue/: CMakeLists.txt  queue.cpp  queue.h
stack/: CMakeLists.txt  stack.cpp  stack.h
